--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -14,20 +14,28 @@
         android:theme="@style/Theme.CookingGameApp"
         tools:targetApi="31">
 
+        <!-- All Activities -->
         <activity android:name=".InstructionActivity" android:exported="false" />
         <activity android:name=".JoinActivity" android:exported="false" />
         <activity android:name=".CreateRoomActivity" android:exported="false" />
 
+        <!-- TEMPORARY: Make PlayGameActivity the launcher -->
         <activity
-            android:name=".MenuActivity"
+            android:name=".PlayGameActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CookingGameApp">
+            android:label="Play Game">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Disable MenuActivity as launcher for now -->
+        <activity
+            android:name=".MenuActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.CookingGameApp" />
 
     </application>
 
