--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".JoinRoomActivity" android:exported="false" />
         <activity android:name=".CreateRoomActivity" android:exported="false" />
         <activity android:name=".MainActivity" android:exported="false" />
+        <activity android:name=".SettingsActivity" android:exported="false" />
 <!--        <activity android:name=".MenuActivity" android:exported="false" />-->
 
     </application>
