[SCRUM 65] Integrate the waiting page

--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".CreateRoomActivity" android:exported="false" />
         <activity android:name=".MainActivity" android:exported="false" />
         <activity android:name=".SettingsActivity" android:exported="false" />
-<!--        <activity android:name=".MenuActivity" android:exported="false" />-->
+        <activity android:name=".WaitingActivity" android:exported="false" />
 
     </application>
 
