--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.cookinggameapp">
 
-
-    <uses-permission android:name="android.permission.BLUETOOTH"
-        tools:ignore="CoarseFineLocation" />
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.BLUETOOTH" tools:ignore="CoarseFineLocation" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -13,8 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
+        android:name=".Firebase"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -25,17 +24,10 @@
         android:theme="@style/Theme.CookingGameApp"
         tools:targetApi="31">
 
-        <!-- Optional for Nearby in older devices -->
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
 
-        <!-- All Activities -->
-        <activity android:name=".InstructionActivity" android:exported="false" />
-        <activity android:name=".JoinActivity" android:exported="false" />
-        <activity android:name=".CreateRoomActivity" android:exported="false" />
-
-        <!-- TEMPORARY: Make PlayGameActivity the launcher -->
         <activity
-            android:name=".MenuActivity"
+            android:name=".MainActivity"
             android:theme="@style/Theme.CookingGameApp"
             android:exported="true">
             <intent-filter>
@@ -47,9 +39,9 @@
         <activity android:name=".InstructionActivity" android:exported="false" />
         <activity android:name=".JoinRoomActivity" android:exported="false" />
         <activity android:name=".CreateRoomActivity" android:exported="false" />
-        <activity android:name=".MainActivity" android:exported="false" />
         <activity android:name=".SettingsActivity" android:exported="false" />
         <activity android:name=".WaitingActivity" android:exported="false" />
+        <activity android:name=".PlayGameActivity" android:exported="false" />
 
     </application>
 
