--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.cookinggameapp">
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.BLUETOOTH" tools:ignore="CoarseFineLocation" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +23,10 @@
         android:theme="@style/Theme.CookingGameApp"
         tools:targetApi="31">
 
-        <!-- Make MainActivity the launcher for testing the drag screen -->
+        <!-- Required library -->
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
+        <!-- Main Entry Point -->
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.CookingGameApp"
@@ -25,10 +37,14 @@
             </intent-filter>
         </activity>
 
+        <!-- All App Activities -->
         <activity android:name=".InstructionActivity" android:exported="false" />
-        <activity android:name=".JoinActivity" android:exported="false" />
+        <activity android:name=".JoinRoomActivity" android:exported="false" />
         <activity android:name=".CreateRoomActivity" android:exported="false" />
-        <activity android:name=".MenuActivity" android:exported="false" />
+        <activity android:name=".SettingsActivity" android:exported="false" />
+        <activity android:name=".WaitingActivity" android:exported="false" />
+        <activity android:name=".PlayGameActivity" android:exported="false" />
+        <activity android:name=".SelectDifficultyActivity" android:exported="false" />
 
     </application>
 
