--- a/.github/workflows/main-workflows.yml
+++ b/.github/workflows/main-workflows.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest
 
-      - name: Scan Dependencies for Vulnerabilities
-        uses: gradle/actions/dependency-submission@v1
+      # - name: Scan Dependencies for Vulnerabilities
+      #   uses: gradle/actions/dependency-submission@v1
