--- a/.github/workflows/dev-check.yml
+++ b/.github/workflows/dev-check.yml
@@ -24,14 +24,15 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Grant Gradlew permission
+      - name: Grant execute permission for Gradle
         run: chmod +x ./gradlew
+        working-directory: CookingGameApp
 
       - name: Build project
         run: ./gradlew assembleDebug
         working-directory: CookingGameApp
 
-  static-analysis:
+    static-analysis:
     name: Static Code Analysis (Detekt)
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -46,11 +47,15 @@ jobs:
           java-version: 17
           distribution: temurin
 
+      - name: Grant execute permission for Gradle
+        run: chmod +x ./gradlew
+        working-directory: CookingGameApp
+
       - name: Run Detekt
         run: ./gradlew detekt
         working-directory: CookingGameApp
 
-  security-scan:
+    security-scan:
     name: Dependency Vulnerability Check
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -59,6 +64,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install CycloneDX plugin
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x ./gradlew
+        working-directory: CookingGameApp
+
+      - name: Generate CycloneDX BOM
         run: ./gradlew cyclonedxBom
         working-directory: CookingGameApp
