--- a/.github/workflows/dev-check.yml
+++ b/.github/workflows/dev-check.yml
@@ -32,48 +32,48 @@ jobs:
         run: ./gradlew assembleDebug
         working-directory: CookingGameApp
 
-  static-analysis:
-    name: Static Code Analysis (Detekt)
-    runs-on: ubuntu-latest
-    needs: build-and-test
+  # static-analysis:
+  #   name: Static Code Analysis (Detekt)
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-test
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: temurin
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: 17
+  #         distribution: temurin
 
-      - name: Grant execute permission for Gradle
-        run: chmod +x ./gradlew
-        working-directory: CookingGameApp
+  #     - name: Grant execute permission for Gradle
+  #       run: chmod +x ./gradlew
+  #       working-directory: CookingGameApp
 
-      - name: Run Detekt
-        run: ./gradlew detekt
-        working-directory: CookingGameApp
+  #     - name: Run Detekt
+  #       run: ./gradlew detekt
+  #       working-directory: CookingGameApp
 
-  security-scan:
-    name: Dependency Vulnerability Check
-    runs-on: ubuntu-latest
-    needs: build-and-test
+  # security-scan:
+  #   name: Dependency Vulnerability Check
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-test
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: temurin
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: 17
+  #         distribution: temurin
 
-      - name: Grant execute permission for Gradle
-        run: chmod +x ./gradlew
-        working-directory: CookingGameApp
+  #     - name: Grant execute permission for Gradle
+  #       run: chmod +x ./gradlew
+  #       working-directory: CookingGameApp
 
-      - name: Generate CycloneDX BOM
-        run: ./gradlew cyclonedxBom
-        working-directory: CookingGameApp
+  #     - name: Generate CycloneDX BOM
+  #       run: ./gradlew cyclonedxBom
+  #       working-directory: CookingGameApp
