[Scrum-96,Scrum-94,Scrum-97] Develop the difficulty page and direct the choosen time/difficulty on the game.

--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         <activity android:name=".SettingsActivity" android:exported="false" />
         <activity android:name=".WaitingActivity" android:exported="false" />
         <activity android:name=".PlayGameActivity" android:exported="false" />
+        <activity android:name=".SelectDifficultyActivity" android:exported="false" />
+
 
     </application>
 
