--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.CookingGameApp"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,13 +37,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".InstructionActivity" android:exported="false" android:screenOrientation="landscape" />
-        <activity android:name=".JoinRoomActivity" android:exported="false" android:screenOrientation="landscape" />
-        <activity android:name=".CreateRoomActivity" android:exported="false" android:screenOrientation="landscape" />
-        <activity android:name=".SettingsActivity" android:exported="false" android:screenOrientation="landscape" />
-        <activity android:name=".WaitingActivity" android:exported="false" android:screenOrientation="landscape" />
-        <activity android:name=".PlayGameActivity" android:exported="false" android:screenOrientation="landscape" />
-        <activity android:name=".SelectDifficultyActivity" android:exported="false" android:screenOrientation="landscape" />
+        <activity android:name=".InstructionActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".JoinRoomActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".CreateRoomActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".SettingsActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".WaitingActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".PlayGameActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".SelectDifficultyActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
 
     </application>
 
