--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".EndscreenActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
         <activity android:name=".CongratsActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
         <activity android:name=".MainActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
+        <activity android:name=".RecipeGameActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
 
     </application>
 
