--- a/CookingGameApp/gradle.properties
+++ b/CookingGameApp/gradle.properties
@@ -4,20 +4,21 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. For more details, visit
-# https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-# org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+
+# JVM args for Gradle daemon: give it more memory
+org.gradle.jvmargs=-Xmx3072m -Dfile.encoding=UTF-8
+
+# Kotlin daemon memory limit: ensure Kotlin compiler gets enough
+kotlin.daemon.jvm.options=-Xmx1024m
+
+# AndroidX package structure
 android.useAndroidX=true
-# Kotlin code style for this project: "official" or "obsolete":
+
+# Kotlin code style for this project
 kotlin.code.style=official
-# Enables namespacing of each library's R class so that its R class includes only the
-# resources declared in the library itself and none from the library's dependencies,
-# thereby reducing the size of the R class for that library
+
+# Namespacing R class to reduce R class size
 android.nonTransitiveRClass=true
+
+# Optional: enable Gradle parallel build for performance (safe if your modules are decoupled)
+# org.gradle.parallel=true
