--- a/.github/workflows/main-workflows.yml
+++ b/.github/workflows/main-workflows.yml
@@ -1,4 +1,4 @@
-name: DTAP - Kotlin Android CI
+name: DTAP - Mobile App (Kotlin)
 
 on:
   push:
@@ -18,27 +18,62 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          java-version: 17
+          distribution: temurin
 
       - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3
 
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+      - name: Grant execute permission for Gradle
+        run: chmod +x ./gradlew
+        working-directory: CookingGameApp
 
-      - name: Build Debug APK
+      - name: Build project
         run: ./gradlew assembleDebug
+        working-directory: CookingGameApp
 
-      - name: Run Unit Tests
-        run: ./gradlew testDebugUnitTest
+  static-analysis:
+    name: Static Code Analysis (Detekt)
+    runs-on: ubuntu-latest
+    needs: build-and-test
 
-      # - name: Scan Dependencies for Vulnerabilities
-      #   uses: gradle/actions/dependency-submission@v1
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x ./gradlew
+        working-directory: CookingGameApp
+
+      - name: Run Detekt
+        run: ./gradlew detekt
+        working-directory: CookingGameApp
+
+  security-scan:
+    name: Dependency Vulnerability Check
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x ./gradlew
+        working-directory: CookingGameApp
+
+      - name: Generate CycloneDX BOM
+        run: ./gradlew cyclonedxBom
+        working-directory: CookingGameApp
