Bocheng update music control logic and add feature to delete recipe

--- a/CookingGameApp/app/src/main/AndroidManifest.xml
+++ b/CookingGameApp/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".MainActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
         <activity android:name=".RecipeGameActivity" android:exported="false" android:screenOrientation="sensorLandscape" />
         <activity android:name=".CreateRecipeActivity" />
+        <activity android:name=".DeleteRecipeActivity" />
 
     </application>
 
